// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c7 {
  display: none;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c3"
      >
        <div
          class="c4 date container"
        >
          <div
            class="c5"
          >
            <span
              class="c6"
            >
              NaN Invalid Date
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              NaN
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              Invalid Date
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <h1
            class="c9"
          >
            Blog 1 
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c17 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c19 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c13 {
  position: relative;
}

.c15 {
  height: 0;
}

.c16 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c20 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c21 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c12 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c7 {
  display: none;
}

.c14 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c17 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c3"
      >
        <div
          class="c4 date container"
        >
          <div
            class="c5"
          >
            <span
              class="c6"
            >
              23-30 Dec
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              23-30
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              Dec
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <h1
            class="c9"
          >
            Untitled blog (DELETED)
          </h1>
          <div
            class="c10"
          >
            <div
              class=""
            >
              <span
                class="c11"
                type="travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <style>
              
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
            </style>
            <div
              class="c15"
              style="padding-bottom: 100%;"
            >
              <div
                class="c16"
              >
                <div
                  class="c17 c18"
                >
                  <div
                    class="c19"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <div
                class="gg-image__img--hide-no-js"
              >
                <img
                  alt="card"
                  class="c20"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="c21"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
              <div
                class="gg-image__img--hide-js"
              >
                <img
                  alt="card"
                  class="c22"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="c23"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c17 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c19 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c13 {
  position: relative;
}

.c15 {
  height: 0;
}

.c16 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c20 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c21 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c12 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c7 {
  display: none;
}

.c14 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c17 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c3"
      >
        <div
          class="c4 date container"
        >
          <div
            class="c5"
          >
            <span
              class="c6"
            >
              23-30 Dec
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              23-30
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              Dec
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <h1
            class="c9"
          >
            St Ives  2018
          </h1>
          <div
            class="c10"
          >
            <div
              class=""
            >
              <span
                class="c11"
                type="travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <style>
              
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
            </style>
            <div
              class="c15"
              style="padding-bottom: 100%;"
            >
              <div
                class="c16"
              >
                <div
                  class="c17 c18"
                >
                  <div
                    class="c19"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <div
                class="gg-image__img--hide-no-js"
              >
                <img
                  alt="card"
                  class="c20"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="c21"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
              <div
                class="gg-image__img--hide-js"
              >
                <img
                  alt="card"
                  class="c22"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="c23"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c7 {
  display: none;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c3"
      >
        <div
          class="c4 date container"
        >
          <div
            class="c5"
          >
            <span
              class="c6"
            >
              NaN Invalid Date
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              NaN
            </span>
          </div>
          <div
            class="c7"
          >
            <span
              class="c6"
            >
              Invalid Date
            </span>
          </div>
        </div>
        <div
          class="c8"
        >
          <h1
            class="c9"
          >
            Blog 1 
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c17 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c19 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c13 {
  position: relative;
}

.c15 {
  height: 0;
}

.c16 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c20 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c21 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c12 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c7 {
  display: none;
}

.c14 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c17 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                NaN
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              St Ives  2018
            </h1>
            <div
              class="c10"
            >
              <div
                class=""
              >
                <span
                  class="c11"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13 c14"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c15"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    <div
                      class="c19"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c20"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c21"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="c10"
            >
              <div
                class=""
              >
                <span
                  class="c11"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13 c14"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c15"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    <div
                      class="c19"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c20"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c21"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c17 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c19 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c13 {
  position: relative;
}

.c15 {
  height: 0;
}

.c16 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c20 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c21 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c12 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c7 {
  display: none;
}

.c14 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c17 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div
    class="test-custom-classname"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                NaN
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              St Ives  2018
            </h1>
            <div
              class="c10"
            >
              <div
                class=""
              >
                <span
                  class="c11"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13 c14"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c15"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    <div
                      class="c19"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c20"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c21"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="c10"
            >
              <div
                class=""
              >
                <span
                  class="c11"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13 c14"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c15"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c17 c18"
                  >
                    <div
                      class="c19"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c20"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c21"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
.c10 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
}

.c10:focus-within,
.c10:focus {
  outline: none !important;
}

.c10:focus-within::after,
.c10:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10:focus,
.c10:hover {
  background-color: #BA2020;
  color: white;
}

.c10:active {
  background-color: #9F1717;
}

.c10:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c27 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
  cursor: default;
}

.c27:focus-within,
.c27:focus {
  outline: none !important;
}

.c27:focus-within::after,
.c27:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c27:focus,
.c27:hover {
  background-color: #BA2020;
  color: white;
}

.c27:active {
  background-color: #9F1717;
}

.c27:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c2 {
  padding: 2rem;
}

.c20 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c22 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c16 {
  position: relative;
}

.c18 {
  height: 0;
}

.c19 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c25 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c26 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c4 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c15 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c7 {
  display: none;
}

.c17 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c9 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c14 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

.c11 {
  margin-bottom: 2rem;
  box-sizing: border-box;
}

@media (prefers-color-scheme:dark) {
  .c10:focus-within::after,
  .c10:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    background-color: #CA2020;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c10:focus,
  .c10:hover {
    background-color: #891111;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c10:active {
    background-color: #730D0D;
  }
}

@media (prefers-color-scheme:dark) {
  .c10:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (prefers-color-scheme:dark) {
  .c27:focus-within::after,
  .c27:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c27 {
    background-color: #CA2020;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c27:focus,
  .c27:hover {
    background-color: #891111;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c27:active {
    background-color: #730D0D;
  }
}

@media (prefers-color-scheme:dark) {
  .c27:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c26 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

@media (min-width:32.25rem) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: inherit;
  }
}

@media (prefers-color-scheme:dark) {

}

@media (prefers-color-scheme:dark) {

}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                NaN
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c10 c11"
      type="button"
    >
      <span
        class="c12"
      >
        Delete blog
      </span>
    </button>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              St Ives  2018
            </h1>
            <div
              class="c13"
            >
              <div
                class=""
              >
                <span
                  class="c14"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c15"
          >
            <div
              class="c16 c17"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c18"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c19"
                >
                  <div
                    class="c20 c21"
                  >
                    <div
                      class="c22"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c24"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c25"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c26"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c10 c11"
      type="button"
    >
      <span
        class="c12"
      >
        Delete blog
      </span>
    </button>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          aria-hidden="true"
          class="c3"
        >
          <div
            class="c4 date container"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                23-30
              </span>
            </div>
            <div
              class="c7"
            >
              <span
                class="c6"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c8"
          >
            <h1
              class="c9"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="c13"
            >
              <div
                class=""
              >
                <span
                  class="c14"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c15"
          >
            <div
              class="c16 c17"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c18"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c19"
                >
                  <div
                    class="c20 c21"
                  >
                    <div
                      class="c22"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c24"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c25"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c26"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="c27 c11"
      disabled=""
      type="button"
    >
      <span
        class="c12"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
